<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_layout"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:focusable="true"
    android:keepScreenOn="true">

    <TextView
        android:id="@+id/welcome_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/akkurat"
        android:text="@string/welcome_title"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/akkurat"
        android:text="@string/tv_name"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size"
        app:layout_constraintLeft_toRightOf="@id/welcome_title"
        app:layout_constraintStart_toEndOf="@id/welcome_title"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/creator_fee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="@dimen/text_top_margin"
        android:fontFamily="@font/akkurat"
        android:text="@string/creator_fee"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_name" />

    <TextView
        android:id="@+id/creator_fee_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:fontFamily="@font/akkurat"
        android:text="@string/wallet_payment_unit"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/creator_fee" />

    <TextView
        android:id="@+id/wallet_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="@dimen/text_top_margin"
        android:fontFamily="@font/akkurat"
        android:text="@string/wallet_balance"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/creator_fee_unit" />

    <TextView
        android:id="@+id/wallet_balance_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:fontFamily="@font/akkurat"
        android:text="@string/wallet_payment_unit"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/wallet_balance" />

    <TextView
        android:id="@+id/tap_instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="@dimen/text_top_margin"
        android:fontFamily="@font/akkurat"
        android:text="@string/tap_instructions"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/wallet_balance_unit" />

    <ImageView
        android:id="@+id/qr_code"
        android:layout_width="@dimen/qr_code_size"
        android:layout_height="@dimen/qr_code_size"
        android:layout_marginTop="@dimen/qr_top_margin"
        android:layout_marginEnd="@dimen/qr_right_margin"
        android:layout_marginRight="@dimen/qr_right_margin"
        android:contentDescription="@string/qr_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_qr_placeholder" />

    <TextView
        android:id="@+id/wallet_address"
        android:layout_width="@dimen/wallet_address_width"
        android:layout_height="@dimen/wallet_address_height"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="@dimen/qr_right_margin"
        android:layout_marginRight="@dimen/qr_right_margin"
        android:fontFamily="@font/akkurat"
        android:text="@string/wallet_address"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/qr_code" />

    <TextView
        android:id="@+id/loading_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/akkurat"
        android:text="@string/loading_burner_wallet"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/loader"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/loader"
        style="@style/SpinKitView.CubeGrid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:SpinKit_Color="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
